--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,7 +4,7 @@ Start Footer Bar
 ================================= -->
 
 <footer class="footer">
-    <p class="m-0 text-center">Här hittar du mig:</p>
+    <p class="m-0 text-center pt-4">Här hittar du mig:</p>
         <div class="icons">
             <a href="https://www.facebook.com/christian.bergane" target="_blank">
                 <div class="layer">
