--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -15,16 +15,19 @@ Start Navigation Bar
               <span class="navToggle__text">Toggle Menu</span>
           </button>
           </div>
+            <button id="theme-toggle" class="theme-toggle-btn">
+            Växla Tema
+            </button>
           <div class="navCollapseCol">
-          <div class="navCol">
-              <ul>
-                <li><a href="{% url 'bergane:index' %}" class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}">Hem</a></li>
-                <li><a href="{% url 'bergane:portfolios' %}" class="{% if request.resolver_match.url_name == 'portfolios' %}active{% endif %}">Portfolio</a></li>
-                <li><a href="{% url 'bergane:blogs' %}" class="{% if request.resolver_match.url_name == 'blogs' %}active{% endif %}">Blog</a></li>
-                <li><a href="{% url 'flashcards:category_list' %}" class="{% if request.resolver_match.url_name == 'category_list' %}active{% endif %}">Flashcards</a></li>
-                <li><a href="{% url 'bergane:contact' %}" class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">Kontakta</a></li>
-              </ul>
-          </div>
+            <div class="navCol">
+                <ul>
+                    <li><a href="{% url 'bergane:index' %}" class="{% if request.resolver_match.url_name == 'index' %}active{% endif %}">Hem</a></li>
+                    <li><a href="{% url 'bergane:portfolios' %}" class="{% if request.resolver_match.url_name == 'portfolios' %}active{% endif %}">Portfolio</a></li>
+                    <li><a href="{% url 'bergane:blogs' %}" class="{% if request.resolver_match.url_name == 'blogs' %}active{% endif %}">Blog</a></li>
+                    <li><a href="{% url 'flashcards:category_list' %}" class="{% if request.resolver_match.url_name == 'category_list' %}active{% endif %}">Flashcards</a></li>
+                    <li><a href="{% url 'bergane:contact' %}" class="{% if request.resolver_match.url_name == 'contact' %}active{% endif %}">Kontakta</a></li>
+                </ul>
+            </div>
           </div>
       </div>
       </div>
