--- a/templates/index.html
+++ b/templates/index.html
@@ -45,12 +45,15 @@
             {% for sk in me.userprofile.skills.all %}
             {% if sk.is_key_skill %}
             <div class="keySkillCard">
-              {% if sk.image %}
-              <div class="ksIconCol">
+              
+              <div class="ksIconCol color-text">
+                <i class="{{ sk.icon_class }}"></i>
+                {% if sk.image %}
                 <img src="{{sk.image.url}}" alt="...">
+                {% endif %}
               </div>
-              {% endif %}
-              <span class="ksText">{{sk.name}}</span>
+              
+              <span class="ksText">{{sk.name}}</span> 
             </div>
             {% endif %}
             {% endfor %}
@@ -85,8 +88,8 @@
     </div>
   </div>
 </section>
-<section>
-    <div class="sectionSpaceSm bg-secondary-subtle">
+<section >
+    <div class="sectionSpaceSm">
       <div class="container">
         <div class="row pb-3">
           <div class="col">
@@ -187,8 +190,6 @@
               <div class="test-swiper-button-next swiper-button-next swiperBtnStyle"></div>
               <div class="test-swiper-button-prev swiper-button-prev swiperBtnStyle"></div>
             </div>
-  
-  
           </div>
         </div>
       </div>
