--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -32,8 +32,80 @@ font-family: 'Heebo', sans-serif; */
   --color-light: #fcfcfc;
 }
 
+.dark {
+  width: 50px;
+  height: 20px;
+  position: relative;
+  display: block;
+  background: #ebebeb;
+  border-radius: 200px;
+  box-shadow: inset 0 5px 15px rgba(0, 0, 0, 0.4), inset 0 -5px 15px rgba(255, 255, 255, 0.4);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.dark::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  background: linear-gradient(180deg, #ffcc89, #d8860d);
+  border-radius: 180px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.switch-dark {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+
+.switch-dark:checked + .dark {
+  background: #242424;
+}
+
+.switch-dark:checked + .dark::after {
+  left: 49px;
+  transform: translateX(-100%);
+  background: linear-gradient(180deg, #777, #3a3a3a);
+}
+
+.dark:active::after {
+  width: 26px;
+}
+
+.dark svg {
+  position: absolute;
+  width: 15px;
+  top: -9px;
+  z-index: 100;
+}
+
+.dark svg.sun {
+  left: 2px;
+  fill: #fff;
+  transition: 0.3s;
+}
+
+.dark svg.moon {
+  left: 33px;
+  fill: #7e7e7e;
+  transition: 0.3s;
+}
+
+.switch-dark:checked + .dark svg.sun {
+  fill: #7e7e7e !important;
+}
+
+.switch-dark:checked + .dark svg.moon {
+  fill: #fff !important; 
+}
+
 .theme-toggle-btn {
-  padding: 15px;
+  padding: 10px;
   font-size: 16px;
   color: var(--bs-white);
   background-color: var(--color-light);
@@ -253,7 +325,7 @@ a, .btn {
 	-webkit-transition: background-color 500ms ease-in-out 250ms;
   -o-transition: background-color 500ms ease-in-out 250ms;
   transition: background-color 500ms ease-in-out 250ms;
-	background-color: #000;
+	background-color: var(--color-light);
 	border: 1px solid rgba(0,0,0,0.2);
   margin-left: auto;
 }
@@ -266,7 +338,7 @@ a, .btn {
   display: block;
   width: 18px;
   height: 2px;
-  background-color: #000;
+  background-color: var(--color-light);
   -webkit-transition: transform 500ms ease-in-out;
   -o-transition: transform 500ms ease-in-out;
   transition: transform 500ms ease-in-out;
@@ -875,7 +947,7 @@ input[type=text], input[type=email], select, textarea {
     bottom: 0;
     width: 230px;
     padding: 20px;
-    background: var(--primaryDarkColor);
+    background: var(--lightBg);
     z-index: 99;
     -webkit-transform: translateX(-100%);
     -ms-transform: translateX(-100%);
@@ -906,7 +978,7 @@ input[type=text], input[type=email], select, textarea {
   }
   .navCol a {
   	font-size: 16px;
-    color: var(--bs-white);
+    color: var(--color-light);
   }
 
   .bannerUserImg {
