--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <link rel="index" href="{% url 'bergane:index' %}"/>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link rel="apple-touch-icon" type="image/png" href="{% static 'images/favicon.ico' %}">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- Fontawsome import -->
     <script src="https://kit.fontawesome.com/96a4d5e388.js" crossorigin="anonymous"></script>
     <!-- ================================
@@ -38,9 +40,17 @@
     <script src="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
     <!-- my own javascripts link -->
     <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
-
+    <script>
+        AOS.init({
+            duration: 1000, // animationsduration i millisekunder
+            easing: 'ease-in-out-quart', // animationseffekt
+            once: true, // om satt till 'true', animationen körs bara en gång per element
+            // Andra anpassningar...
+        });
+    </script>
     <!-- Own script to close message -->
     <script>
         setTimeout(function () {
