--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,7 @@
           </div>
           {% for p in portfolio %}
           {% if p.is_active %}
-          <div class="portfolioCard">
+          <div class="portfolioCard" data-aos="fade-up" data-aos-delay="100">
             <div class="row g-4 align-item-center">
               <div class="col-md-auto">
                 <div class="portfolioImgCol">
@@ -208,22 +208,22 @@
             <a href="{% url 'bergane:blogs' %}" class="simpleLink">Se alla</a>
           </div>
         </div>
-        <div class="row g-3">
+        <ul class="list-unstyled">
           {% for b in blogs %}
           {% if b.is_active %}
-            <div class="col-lg-6">
-              <div class="cardStyle1">
-                <h4 class="mdTitle cs1Title"><a href="{% url 'bergane:blog' slug=b.slug %}">{{b.name}}</a></h4>
-                <ul class="cardOptionCol">
-                  <li>{{b.timestamp.date}}</li>
-                  <li>{{b.author}}</li>
-                </ul>
-                <p>{{b.description}}</p>
+          <li class="mb-3" data-aos="fade-up" data-aos-delay="100">
+            <div>
+              <h5 class="mdTitle"><a href="{% url 'bergane:blog' slug=b.slug %}">{{ b.name }}</a></h5>
+              <div>
+                <small>{{ b.timestamp.date }} av {{ b.author }}</small>
               </div>
+              <p>{{ b.description }}</p>
             </div>
+          </li>
+          <hr />
           {% endif %}
           {% endfor %}
-        </div>
+        </ul>
       </div>
     </div>
   </section>
